namespace SmilingCup_Backend.Payment.Domain.Model.ValueObjects;

public enum OrderStatus
{
    Completed,
    Pending,
    Cancelled
}