namespace SmilingCup_Backend.Payment.Domain.Model.ValueObjects;

public enum SubscriptionPlan
{
    Basic,
    Premium,
    Vip
}